feat: support transaction and fee/tax
